<resources>
    <string name="app_name">ズボラ日記</string>
    <string name="title_list">List</string>
    <string name="title_calendar">Calender</string>
    <string name="title_settings">Settings</string>
    <string name="local_date_format_pattern_japanese_date">yyyy年M月d日(E)</string>
    <string name="local_date_time_format_pattern_japanese_date_time_with_seconds">yyyy年M月d日(E) HH:mm:ss</string>
    <string name="local_time_format_pattern_hour_minute">HH:mm</string>
    <string name="year_month_format_pattern_japanese_year_month">yyyy年M月</string>
    <string name="enum_day_of_week_name_sunday">日曜</string>
    <string name="enum_day_of_week_name_monday">月曜</string>
    <string name="enum_day_of_week_name_tuesday">火曜</string>
    <string name="enum_day_of_week_name_wednesday">水曜</string>
    <string name="enum_day_of_week_name_thursday">木曜</string>
    <string name="enum_day_of_week_name_friday">金曜</string>
    <string name="enum_day_of_week_name_saturday">土曜</string>
    <string name="enum_day_of_week_short_name_sunday">日</string>
    <string name="enum_day_of_week_short_name_monday">月</string>
    <string name="enum_day_of_week_short_name_tuesday">火</string>
    <string name="enum_day_of_week_short_name_wednesday">水</string>
    <string name="enum_day_of_week_short_name_thursday">木</string>
    <string name="enum_day_of_week_short_name_friday">金</string>
    <string name="enum_day_of_week_short_name_saturday">土</string>
    <string name="enum_weather_unknown">--</string>
    <string name="enum_weather_sunny">晴</string>
    <string name="enum_weather_cloudy">曇</string>
    <string name="enum_weather_rainy">雨</string>
    <string name="enum_weather_snowy">雪</string>
    <string name="enum_condition_unknown">--</string>
    <string name="enum_condition_happy">HAPPY</string>
    <string name="enum_condition_good">GOOD</string>
    <string name="enum_condition_average">AVERAGE</string>
    <string name="enum_condition_poor">POOR</string>
    <string name="enum_condition_bad">BAD</string>
    <string name="enum_theme_color_white">ホワイト</string>
    <string name="enum_theme_color_black">ブラック</string>
    <string name="enum_theme_color_red">レッド</string>
    <string name="enum_theme_color_blue">ブルー</string>
    <string name="enum_theme_color_green">グリーン</string>
    <string name="enum_theme_color_yellow">イエロー</string>
    <string name="dialog_base_alert_yes">はい</string>
    <string name="dialog_base_alert_no">いいえ</string>
    <string name="dialog_diary_delete_title">警告</string>
    <string name="dialog_diary_delete_message">の日記を削除してもよろしいでしょうか。</string>
    <string name="dialog_diary_load_failure_title">警告</string>
    <string name="dialog_diary_load_failure_message">の日記の読込に失敗しました。</string>
    <string name="view_image_progress_image_default_description">画像</string>
    <string name="reminder_notification_worker_channel_name">リマインダー通知</string>
    <string name="reminder_notification_worker_channel_description">設定した時間に日記を書く事をお知らせします。</string>
    <string name="reminder_notification_worker_content_title">お疲れ様です</string>
    <string name="reminder_notification_worker_content_text">今日の出来事を日記に書きましょう。</string>
    <string name="dialog_fragment_number_picker_cancel">キャンセル</string>
    <string name="dialog_fragment_number_picker_decision">決定</string>
    <string name="row_background_delete_button_delete">削除</string>
    <string name="fragment_diary_list_toolbar_title">ズボラ日記</string>
    <string name="fragment_diary_list_toolbar_option_word_search">ワード検索</string>
    <string name="fragment_diary_list_toolbar_navigation_top_year_month_switching">先頭年月切替</string>
    <string name="fragment_diary_list_no_saved_diary_message">保存されている日記がありません。</string>
    <string name="fragment_diary_list_fab_new_diary_creation">新規作成</string>
    <string name="fragment_word_search_input_field_hint">検索ワード入力</string>
    <string name="fragment_word_search_no_results_message">一致するものが見つかりません。</string>
    <string name="fragment_word_search_num_results_message">件見つかりました。</string>
    <string name="fragment_word_search_result_item">項目</string>
    <string name="fragment_word_search_fab_top_scroll">先頭へスクロール</string>
    <string name="row_diary_list_standard_title_hint">無題</string>
    <string name="row_diary_list_standard_image_description">添付写真</string>
    <string name="row_diary_list_word_search_result_title_hint">無題</string>
    <string name="row_diary_list_word_search_result_item_hint">項目*</string>
    <string name="row_diary_list_word_search_result_item_title_hint">無題</string>
    <string name="row_diary_list_word_search_result_item_comment_hint">コメントなし</string>
    <string name="row_diary_list_no_diary_message_message">上記以前の日記はありません。</string>
    <string name="fragment_calendar_month_header_format">yyyy年M月</string>
    <string name="fragment_calendar_month_header_tools_value">0000年00月00日</string>
    <string name="fragment_calendar_no_diary_message">日記がありません。</string>
    <string name="fragment_calendar_diary_load_failure_message">日記の読込に失敗しました。</string>
    <string name="fragment_calendar_fab_content_description">日記編集</string>
    <string name="fragment_settings_main_title_setting">設定</string>
    <string name="fragment_settings_item_value_not_set">未設定</string>
    <string name="fragment_settings_section_title_design">デザイン</string>
    <string name="fragment_settings_item_title_theme_color">テーマカラー</string>
    <string name="fragment_settings_section_title_setting">設定</string>
    <string name="fragment_settings_item_title_calendar_start_day">カレンダーの開始曜日</string>
    <string name="fragment_settings_item_title_reminder_notification">リマインダーの通知</string>
    <string name="fragment_settings_item_title_passcode_lock">パスコードロック</string>
    <string name="fragment_settings_item_title_weather_info_fetch">天気情報取得</string>
    <string name="fragment_settings_section_title_data">データ</string>
    <string name="fragment_settings_item_title_all_diaries_delete">全日記削除</string>
    <string name="fragment_settings_item_title_all_settings_initialization">全設定初期化</string>
    <string name="fragment_settings_item_title_all_data_delete">全データ削除</string>
    <string name="fragment_settings_section_title_other">その他</string>
    <string name="fragment_settings_item_title_open_source_software_licenses">OSSライセンス</string>
    <string name="layout_settings_item_title_tools_value">設定項目</string>
    <string name="fragment_settings_permission_name_notification">通知</string>
    <string name="fragment_settings_permission_name_location">位置情報利用</string>
    <string name="dialog_permission_title">権限が必要です</string>
    <string name="dialog_permission_first_message">この機能を正常に動作させるためには</string>
    <string name="dialog_permission_third_message">権限が必要です。設定画面で権限を有効にしてください。</string>
    <string name="dialog_all_diaries_delete_title">警告</string>
    <string name="dialog_all_diaries_delete_message">削除した日記は復元できませんがよろしいでしょうか。</string>
    <string name="dialog_all_settings_initialization_title">警告</string>
    <string name="dialog_all_settings_initialization_message">全ての設定値を初期化してもよろしいでしょうか。</string>
    <string name="dialog_all_data_delete_title">警告</string>
    <string name="dialog_all_data_delete_message">削除したデータは復元できませんがよろしいでしょうか。</string>
    <string name="fragment_open_source_software_licenses_toolbar_title">OSSライセンス</string>
    <string name="fragment_diary_show_toolbar_title">日記</string>
    <string name="fragment_diary_show_toolbar_option_edit_diary">日記編集</string>
    <string name="fragment_diary_show_toolbar_option_delete_diary">日記削除</string>
    <string name="fragment_diary_show_date">0000年00月00日(月)</string>
    <string name="layout_diary_show_weather">天気：</string>
    <string name="layout_diary_show_weather1_tools_value">晴</string>
    <string name="layout_diary_show_weather_slush">／</string>
    <string name="layout_diary_show_weather2_tools_value">雲</string>
    <string name="layout_diary_show_condition">気分：</string>
    <string name="layout_diary_show_condition_tools_value">良</string>
    <string name="layout_diary_show_title">タイトル</string>
    <string name="layout_diary_show_title_hint">無題</string>
    <string name="layout_diary_show_item_1">項目1</string>
    <string name="layout_diary_show_item_2">項目2</string>
    <string name="layout_diary_show_item_3">項目3</string>
    <string name="layout_diary_show_item_4">項目4</string>
    <string name="layout_diary_show_item_5">項目5</string>
    <string name="layout_diary_show_attached_image">思い出の一枚</string>
    <string name="layout_diary_show_attached_image_description">添付写真</string>
    <string name="layout_diary_show_last_update">最終更新日時</string>
    <string name="layout_diary_show_last_update_tools_value">0000/00/00 00:00:00</string>
    <string name="layout_diary_show_item_tools">項目*</string>
    <string name="layout_diary_show_item_title_hint">無題</string>
    <string name="layout_diary_show_item_comment_hint">コメントなし</string>
    <string name="fragment_diary_edit_toolbar_title_create_new">新規作成</string>
    <string name="fragment_diary_edit_toolbar_title_edit">編集中</string>
    <string name="fragment_diary_edit_toolbar_title_value_tools">新規作成／編集中</string>
    <string name="fragment_diary_edit_toolbar_option_save_diary">日記保存</string>
    <string name="fragment_diary_edit_toolbar_option_delete_diary">日記削除</string>
    <string name="fragment_diary_edit_toolbar_option_test">テスト</string>
    <string name="fragment_diary_edit_editing_diary">編集対象日記：%s</string>
    <string name="fragment_diary_edit_date">日付</string>
    <string name="fragment_diary_edit_date_value_tools">2012/12/12(日)</string>
    <string name="fragment_diary_edit_weather">天気</string>
    <string name="fragment_diary_edit_weather_slush">／</string>
    <string name="fragment_diary_edit_weather_value_tools">--</string>
    <string name="fragment_diary_edit_condition">気分</string>
    <string name="fragment_diary_edit_condition_value_tools">--</string>
    <string name="fragment_diary_edit_title">タイトル</string>
    <string name="fragment_diary_edit_title_hint">無題</string>
    <string name="fragment_diary_edit_item_1">項目1</string>
    <string name="fragment_diary_edit_item_2">項目2</string>
    <string name="fragment_diary_edit_item_3">項目3</string>
    <string name="fragment_diary_edit_item_4">項目4</string>
    <string name="fragment_diary_edit_item_5">項目5</string>
    <string name="fragment_diary_edit_item_addition">項目追加</string>
    <string name="fragment_diary_edit_attached_image">思い出の一枚</string>
    <string name="fragment_diary_edit_attached_image_delete">削除</string>
    <string name="fragment_diary_edit_attached_image_attachment">添付</string>
    <string name="layout_diary_edit_item_1_tools">項目*</string>
    <string name="layout_diary_edit_item_delete">項目削除</string>
    <string name="layout_diary_edit_item_title">タイトル</string>
    <string name="layout_diary_edit_item_title_hint">未選択</string>
    <string name="layout_diary_edit_item_comment">コメント</string>
    <string name="layout_diary_edit_item_comment_hint">○○をした。</string>
    <string name="dialog_diary_load_title">確認</string>
    <string name="dialog_diary_load_message">の日記は既に保存されています。保存された日記を読み込みますか。</string>
    <string name="dialog_diary_update_title">警告</string>
    <string name="dialog_diary_update_message">の日記は既に保存されています。保存された日記を上書きしますか。</string>
    <string name="dialog_exit_without_diary_save_title">警告</string>
    <string name="dialog_exit_without_diary_save_message">編集した内容は保存されません。このまま編集を終了してもよろしいですか。</string>
    <string name="dialog_weather_info_fetch_title">確認</string>
    <string name="dialog_weather_info_fetch_message">の天気情報を取得しますか。</string>
    <string name="fragment_diary_item_title_edit_toolbar_title_tools_value">項目1タイトル編集中</string>
    <string name="fragment_diary_item_title_edit_new_item_title">新規項目タイトル</string>
    <string name="fragment_diary_item_title_edit_new_item_title_hint">未入力</string>
    <string name="fragment_diary_item_title_edit_new_item_title_selection_button">新規選択</string>
    <string name="fragment_diary_item_title_edit_title_selection_history">選択履歴</string>
</resources>