<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/diaryEditToolbarOptionDeleteDiary"
        android:icon="@drawable/toolbar_menu_ic_delete_forever_24"
        android:title="@string/fragment_diary_edit_toolbar_option_delete_diary"
        app:showAsAction="never" />

    <item
        android:id="@+id/diaryEditToolbarOptionSaveDiary"
        android:icon="@drawable/toolbar_menu_ic_save_24"
        android:title="@string/fragment_diary_edit_toolbar_option_save_diary"
        app:showAsAction="ifRoom" />

    <!-- TODO:テスト用の為、最終的に削除 -->
    <item
        android:id="@+id/diaryEditToolbarOptionTest"
        android:title="@string/fragment_diary_edit_toolbar_option_test"
        app:showAsAction="never" />

</menu>
