<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="diaryShowViewModel"
            type="com.websarva.wings.android.zuboradiary.ui.diary.diaryshow.DiaryShowViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorSurface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_diary_show_weather" />

            <TextView
                android:id="@+id/text_weather_1_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/layout_diary_show_weather1_tools_value" />

            <TextView
                android:id="@+id/text_weather_slush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_diary_show_weather_slush"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_weather_2_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/layout_diary_show_weather2_tools_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_diary_show_condition" />

            <TextView
                android:id="@+id/text_condition_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/layout_diary_show_condition_tools_value" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{diaryShowViewModel.titleLiveData}"
            android:hint="@string/layout_diary_show_title_hint"
            android:textSize="20sp" />

        <include layout="@layout/layout_diary_show_item"
            android:id="@+id/include_item_1"
            android:titleLiveData="@{diaryShowViewModel.item1TitleLiveData}"
            android:commentLiveData="@{diaryShowViewModel.item1CommentLiveData}"/>

        <include layout="@layout/layout_diary_show_item"
            android:id="@+id/include_item_2"
            android:titleLiveData="@{diaryShowViewModel.item2TitleLiveData}"
            android:commentLiveData="@{diaryShowViewModel.item2CommentLiveData}"/>

        <include layout="@layout/layout_diary_show_item"
            android:id="@+id/include_item_3"
            android:titleLiveData="@{diaryShowViewModel.item3TitleLiveData}"
            android:commentLiveData="@{diaryShowViewModel.item3CommentLiveData}"/>

        <include layout="@layout/layout_diary_show_item"
            android:id="@+id/include_item_4"
            android:titleLiveData="@{diaryShowViewModel.item4TitleLiveData}"
            android:commentLiveData="@{diaryShowViewModel.item4CommentLiveData}"/>

        <include layout="@layout/layout_diary_show_item"
            android:id="@+id/include_item_5"
            android:titleLiveData="@{diaryShowViewModel.item5TitleLiveData}"
            android:commentLiveData="@{diaryShowViewModel.item5CommentLiveData}"/>

        <ImageView
            android:id="@+id/image_attached_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/text_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/layout_diary_show_last_update"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_log_value"
            app:layout_constraintEnd_toStartOf="@+id/text_log_value" />

        <TextView
            android:id="@+id/text_log_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_attached_picture"
            tools:text="@string/layout_diary_show_last_update_tools_value" />

    </LinearLayout>

</layout>
