<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_full_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        tools:context=".ui.diary.diaryitemtitleedit.DiaryItemTitleEditFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar_top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:background="?attr/colorPrimary"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_back_24px"
            app:titleCentered="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:title="@string/fragment_diary_item_title_edit_toolbar_title_tools_value" />

        <TextView
            android:id="@+id/text_item_new_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_diary_item_title_edit_new_item_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_toolbar_top_app_bar" />

        <EditText
            android:id="@+id/edit_text_new_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/fragment_diary_item_title_edit_new_item_title_hint"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_item_new_title" />

        <TextView
            android:id="@+id/text_new_item_title_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_new_item_title"
            tools:text="@string/fragment_diary_item_title_edit_num_of_char_tools_value" />

        <Button
            android:id="@+id/button_select_new_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_diary_item_title_edit_new_item_title_selection_button"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_new_item_title_length" />

        <TextView
            android:id="@+id/text_item_title_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_diary_item_title_edit_title_selection_history"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_select_new_item_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_item_title_selection_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:transitionGroup="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_item_title_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
