<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.websarva.wings.android.zuboradiary.ui.diary.common.model.DiaryUi" />
        <variable
            name="itemNumber"
            type="java.lang.String" />
        <variable
            name="title"
            type="java.lang.String" />
        <variable
            name="onTitleClick"
            type="android.view.View.OnClickListener" />
        <variable
            name="onTitleTextChanged"
            type="androidx.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />
        <variable
            name="comment"
            type="java.lang.String" />
        <variable
            name="onCommentTextChanged"
            type="androidx.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />
        <variable
            name="onItemDeleteButtonClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout_diary_edit_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_diary_edit_item_content_spacing_vertical"
        app:layoutDescription="@xml/motion_scene_layout_diary_edit_item">

        <TextView
            android:id="@+id/text_item_number"
            style="@style/AppTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{itemNumber}"
            android:textAppearance="@style/AppTextViewTextAppearance"
            android:textSize="@dimen/layout_diary_edit_item_text_size"

            app:layout_constraintTop_toTopOf="@id/image_button_item_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_button_item_delete"
            app:layout_constraintBottom_toBottomOf="@id/image_button_item_delete"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.0"
            tools:text="@string/layout_diary_edit_item_1_tools" />

        <ImageButton
            android:id="@+id/image_button_item_delete"
            style="@style/AppImageButtonStyle"
            android:layout_width="@dimen/layout_diary_edit_item_image_button_layout_width"
            android:layout_height="@dimen/layout_diary_edit_item_image_button_layout_height"
            android:contentDescription="@string/layout_diary_edit_item_delete"
            android:onClick="@{onItemDeleteButtonClick}"
            android:src="@drawable/ic_delete_forever_24px"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_item_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_title"/>

        <com.websarva.wings.android.zuboradiary.ui.common.view.PersistentClearIconTextInputLayout
            android:id="@+id/text_input_layout_title"
            style="@style/AppPersistentClearIconTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/layout_diary_edit_item_title"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/layout_diary_edit_item_title_max_length"

            app:layout_constraintTop_toBottomOf="@id/image_button_item_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_comment"
            tools:ignore="DuplicateIncludedIds">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_title"
                style="@style/AppTextInputEditTextNoInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_diary_edit_item_title_hint"
                android:maxLength="@integer/layout_diary_edit_item_title_max_length"
                android:onClick="@{onTitleClick}"
                android:onTextChanged="@{onTitleTextChanged}"
                android:text="@{title}"
                android:textAppearance="@style/AppTextInputEditTextTextAppearance"
                android:textSize="@dimen/layout_diary_edit_item_text_size" />

        </com.websarva.wings.android.zuboradiary.ui.common.view.PersistentClearIconTextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_comment"
            style="@style/AppTextInputLayoutOutlinedBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_diary_edit_item_content_spacing_vertical"
            android:layout_marginBottom="@dimen/layout_diary_edit_item_motion_layout_adjust_bottom_spacing"
            android:hint="@string/layout_diary_edit_item_comment"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/layout_diary_edit_item_comment_max_length"

            app:layout_constraintTop_toBottomOf="@id/text_input_layout_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline">

            <com.websarva.wings.android.zuboradiary.ui.common.view.ScrollableMultiLineTextInputEditText
                android:id="@+id/text_input_edit_text_comment"
                style="@style/AppScrollableMultiLineTextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_diary_edit_item_comment_hint"
                android:lines="@integer/layout_diary_edit_item_comment_lines"
                android:maxLength="@integer/layout_diary_edit_item_comment_max_length"
                android:minLines="@integer/layout_diary_edit_item_comment_lines"
                android:maxLines="@integer/layout_diary_edit_item_comment_lines"
                android:onTextChanged="@{onCommentTextChanged}"
                android:text="@{comment}"
                android:textAppearance="@style/AppScrollableMultiLineTextInputEditTextTextAppearance"
                android:textSize="@dimen/layout_diary_edit_item_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>

